--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="/home/monkey/workspace/RankingTwitter/lib/twitter4j-core-2.2.6.jar"/>
-	<classpathentry kind="lib" path="/DATA/lan-thesis/Code/twitter4j-2.2.6/lib/twitter4j-stream-2.2.6.jar"/>
+	<classpathentry kind="lib" path="lib/twitter4j-core-2.2.6.jar"/>	
 	<classpathentry kind="output" path="bin"/>
 </classpath>
